# automata-dcap-qpl

./: .gitignore  .gitmodules  Cargo.toml  README.md  automata-dcap-qpl.code-workspace
automata-dcap-qpl-lib/: Cargo.toml
automata-dcap-qpl-lib/src/: lib.rs
automata-dcap-qpl-tool/: Cargo.toml
automata-dcap-qpl-tool/src/: contracts.rs  helper.rs  main.rs
automata-dcap-qpl-tool/src/cloud_providers/: azure.rs
common/: Cargo.toml
common/src/: common.rs
contracts/: Cargo.toml  README.md
contracts/src/: enclave_identity_dao.rs  fmspc_tcb_dao.rs  lib.rs  pck_dao.rs  pcs_dao.rs
src/: common.rs  lib.rs
src/moonblaze/: mock_erc20.rs  mock_erc721.rs  mod.rs  moonblaze.rs  std_invariant.rs  std_style.rs
