[package]
name = "automata-dcap-qpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libloading = "0.8"
ethers = "2.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }