[package]
name = "automata-dcap-qpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
automata-dcap-qpl-common = { path = "../common" }
automata-dcap-qpl-contracts = { path = "../contracts" }

ethers = "2.0"
hex = "0.4"
libloading = "0.8"
tokio = { version = "1", features = ["full"] }
openssl = "0.10"
reqwest = "0.11"
urlencoding = "2.1"
